# browsy-assembler

./: Cargo.toml  LICENSE  Makefile  README.md  index.html
src/: lib.rs
