[package]
name = "hello-wasm"
version = "0.1.0"

# Note: while I insert my name below, actually copied from
# https://developer.mozilla.org/en-US/docs/WebAssembly/Rust_to_wasm

authors = ["Thomas Stegmaier<thosteg@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/tommis-dojo/wasm-wasp"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

# The following line:
# for Debian 10 on ARM
#
# What does this break?
#
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
